generate multiple exports. parallel model exec.